provider-kit/flower-server/ingress_flower.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superlink-ingress
  namespace: flower
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: fl-server.dataspace-ikerlan.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: superlink-0
                port:
                  number: 9092
